2008-04-09  Andy Wingo  <wingo@pobox.com>

	* test-suite/gobject.test ("genum values", "gflags values"): Add
	some tests.

	* gnome/gobject/gvalue.scm: (gflags->element-list, genum->enum):
	Use the ->value functions defined in C.

	* gnome/gobject/gvalue.c (scm_c_gvalue_ref): Don't turn <genum>
	and <gflags> values into ints, leave them as gvalues.
	(genum->value, gflags->value): Implemented in C. The latter
	function is new.

	* gnome/gobject/private.h:
	* gnome/gobject/gtype.c (scm_sys_gtype_instance_construct): Export
	scm_c_gtype_instance_bind_to_object instead. Allow for the
	possibility that construct() bound the instance.

	* gnome/gobject/gobject.c
	(scm_with_c_gtype_instance_instance_init): Use bind_to_object; the
	incomplete set_cached() is insufficient if e.g. the
	gobject:set-property calls API on the object.

	* test-suite/gobject.test ("defining custom gobject type"): Add a
	test for the construct arg behaviour.

	* gnome/gobject/private.h:
	* gnome/gobject/gtype.c (scm_c_gtype_instance_set_cached): Expose
	this internal piece to gobject.c.

	* gnome/gobject/gobject.c (push_in_construction_from_scheme)
	(pop_in_construction_from_scheme, in_construction_from_scheme):
	Keep a stack of SCM objects under construction.
	(scm_with_c_gtype_instance_instance_init): If there is an object
	under construction, associate it with the GTypeInstance*, so that
	gobject:set-property calls for construct properties see the same
	SCM as the one under construction.

	* gnome/gobject/gvalue.scm (<gboxed-scm>, <gvalue-array>):
	* gnome/gobject/gclosure.scm (<gclosure>): Inherit from <gboxed>,
	because that's how they roll.

2008-04-08  Andy Wingo  <wingo@pobox.com>

	* gnome/gobject/gtype.h:
	* gnome/gobject/gtype.c: Rewrite to never expose GTypes on the
	Scheme side, rather wrapping GTypes directly as <gtype-class>
	instances. The GType is stored in a <read-only-slot>, which stores
	a raw (untagged) word -- the perfect size for a GType. Hence much